# geek_mail

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json
lib/types/: email.ts
public/: tailwind.css
src/: app.tsx  bindings.ts  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/backend/: geek_phrase.rs  mod.rs  sample_emails.rs
src/backend/hooks/: mod.rs  use_comparison.rs
src/backend/imap/: mod.rs
src/backend/types/: context.rs  email.rs  mod.rs
src/components/: mod.rs  preview.rs  preview_col.rs  viewer.rs
src/conmponents/: preview.tsx  previewCol.tsx  viewer.tsx
src/routes/: index.tsx
