[package]
name = "geek-mail"
version = "0.1.0"
authors = ["jboyett"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
rand="0.8.5"

# Debug
dioxus-logger = "0.5.1"
imp = "0.1.0"
random_choice = "0.3.2"
getrandom = { version = "0.2.15", features = ["js"] }
